# SoundBites

./: CMakeLists.txt  README.md  SoundBites.cpp
cmake/: FindWave.cmake
